2010-10-19  Dominique Dumont  <domi.dumont@free.fr> 1.315

	* Do no check value when creating widgets. Values will be checked 
	  when saving file
	* ListEditor: update 'set selected' entry when a list item is selected"

2010-10-15  Dominique Dumont  <domi.dumont@free.fr> 1.314

	* removed stuff obsoleted by Config::Model 1.212
	* Depends on Config::Model 1.212
	* added utf8 characters in tests
	
2010-10-08  Dominique Dumont  <domi.dumont@free.fr> 1.313

	* Added display of configuration warnings provided by
	Config::Model 1.211 
	* Depends on Config::Model >= 1.211

2010-10-04  Dominique Dumont  <domi.dumont@free.fr> 1.312

	* lib/Config/Model/TkUI.pm (disp_hash): Fixed the synchronize ordered 
	hash display. It used to close displayed hash elements when modifying a value
	well below the hash :-( .

2010-09-10  Dominique Dumont  <domi.dumont@free.fr> 1.311

	* lib/Config/Model/Tk/HashEditor.pm (Populate): usability improvement:
	  copy selected entry text into item when keep is set
	* lib/Config/Model/TkUI.pm (disp_hash): Synchronize ordered hash display in
	tree with respect to the hash editor

2010-09-10  Dominique Dumont  <domi.dumont@free.fr> 1.310

	* lib/Config/Model/Tk/HashEditor.pm (Populate): Fix bug that messed up 
	  effects of 'add' and 'move_down' buttons.

2010-08-08  Dominique Dumont  <domi.dumont@free.fr> 1.309

	* lib/Config/Model/Tk/AnyViewer.pm (add_help): Fix bug that hid
	summary and help text

2010-07-22  Dominique Dumont  <domi.dumont@free.fr> 1.308

	* MANIFEST.SKIP: added libconfig to avoid accidental upload of
	Debian test packages

2010-07-19  Dominique Dumont  <domi.dumont@free.fr> 1.307

	* lib/Config/Model/Tk/Wizard.pm (destroy_wizard): correctly
	destroy wizard widget when quitting. Also main window is hidden
	while wizard is running

2010-07-13  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Tk/ListEditor.pm (move_down): fixed to move
	past element nb 2.

2010-06-14  Dominique Dumont  <domi.dumont@free.fr>
