@@ -4,6 +4,8 @@ author:
   - 'Dominique Dumont'
 build_requires:
   Module::Build: 0.3601
+  Test::More: 0
+  Test::Warn: 0.11
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
@@ -23,4 +25,4 @@ requires:
   Tk: 0
   Tk::DirSelect: 0
   Tk::Tree: 0
-version: 1.315
+version: 1.316
